# Sentinal-Cardio-The-global-integrity-audit

./: .gitignore  AUDIT_GH_JUDICIAL_2026.md⁠  CASE_STUDY _EPIDEMIOLOGICA L_INTEGRITY.md  CENTRAL_CARDIO.md⁠  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL_FEATURES.md  CONTRIBUTING.md  CORE_LATTICE_ORCHESTRATOR.py⁠,  Council_Interface.py.  EXHIBIT_A_MANIFEST. json  EXHIBIT_A_MANIFEST.json  GENOMIC_LATTICE_FRAMEWORK. md  GOVERNANCE.md  INDICTMENT. md.  INTAKE_QUERY.txt  KEEPER_NODE_INTERFACE.md  LAUNCH_SUMMARY.md  LICENSE  MERGE_GUIDE_VISUAL.md  MERGE_INSTRUCTIONS.md  README.md  REGISTRY_OF_INTENT. • md  REPAIR_ORCHESTRATOR.py  SECURITY.md  SENTINEL_INTEGRITY_SHIELD.py⁠  SENTINEL_MANIFEST.md  SENTINEL_WRISTBAND_BOM_v1.1.md  Sentinel_Cardio.md  academic_provenance.md  audit_loop.py  camera_bridge.py⁠  cli_sentinel.py  entinel_node_genesis_trauma.py⁠  epistemic_foundations.md  generate_affidavit.py  grays_harbor_monitor.py  hud_interface.py⁠  ingestion_engine.py⁠  lICENSE  (+25 more)
.github/: FUNDING.yml  dependabot-new.yml  dependabot.yml
.github/scripts/: audit_doj.sh
.github/workflows/: apisec-scan.yml  audit-redacted.yml  bandit.yml  ci.yml  codeql.yml  ethicalcheck.yml  integrity_audit.yml  jfrog-sast.yml  sentinel_run.yml  solve-et-coagula-purificatio.yml  (+1 more)
docs/:  07. md KEEPERS_LITIGATION_2026-06-  github-app-installation-tokens.md.
integrations/: renorm_native_example.py
scripts/: audit_dashboard.py  audit_terminal.py  checksum_validator.py  controller.py  gatekeeper_scan.py⁠  matrix_sweep.py⁠  nlp_audit_analysis.py  performance_optimizer.py
tests/: test_core.py
(+2 files in other folders)
