[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-cardio"
version = "1.0.0"
description = "Global integrity audit system with biometric integration"
requires-python = ">=3.9"
authors = [{name = "Anthony Blair"}]
license = {text = "Other/Proprietary"}

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.900",
    "isort>=5.9",
]
ui = [
    "streamlit>=1.0",
    "numpy>=1.19",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=. --cov-report=html"
